apps/base/apisix/ingresses.yaml
# Redirect testing.midnightthoughts.space to "apisix-gateway" service in the apisix namespace
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: apisix-midnightthoughts-space
    namespace: apisix
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-dns
        external-dns.alpha.kubernetes.io/hostname: midnightthoughts.space
spec:
    rules:
        - host: testing.midnightthoughts.space
          http:
            paths:
                - pathType: Prefix
                  path: "/"
                  backend:
                    service:
                        name: apisix-gateway
                        port:
                            number: 80
    tls:
        - hosts:
            - testing.midnightthoughts.space
          secretName: midnightthoughts-space-tls
